[package]
name = "gpkg-usgs-lookup"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
gdal = "0.18.0"
quick-xml = "0.37.4"
reqwest = {version = "0.12.15", features = ["rustls-tls"], default-features = false}
tokio = {version = "1.44.1", features = ["macros", "rt-multi-thread"]}
 
