[package]
name = "gpkg-usgs-lookup"
version = "0.1.0"
edition = "2024"

[dependencies]
axum ={version =  "0.8.3", features = ["macros"]}
gdal = "0.18.0"
proj = "0.29.0"
regex = "1.11.1"
reqwest = {version = "0.12.15", features = ["rustls-tls"], default-features = false}
serde = {version ="1.0.219", features = ["derive"] }
tokio = {version = "1.44.1", features = ["macros", "rt-multi-thread"]}
